fix: use a target that will be visible

--- a/test.css
+++ b/test.css
@@ -1,3 +1,3 @@
-body {
+.fs__inputInner {
     background-color: red !important;
 }
